WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 225507
[GTK] Warnings about unused filesystem functions
https://bugs.webkit.org/show_bug.cgi?id=225507
Summary
[GTK] Warnings about unused filesystem functions
Philippe Normand
Reported
2021-05-07 02:49:59 PDT
[152/1686] Building CXX object Source/WTF/wtf/CMakeFiles/WTF.dir/glib/FileSystemGlib.cpp.o ../../Source/WTF/wtf/glib/FileSystemGlib.cpp:121:13: warning: unused function 'getFileStat' [-Wunused-function] static bool getFileStat(const String& path, GStatBuf* statBuffer) ^ ../../Source/WTF/wtf/glib/FileSystemGlib.cpp:130:13: warning: unused function 'getFileLStat' [-Wunused-function] static bool getFileLStat(const String& path, GStatBuf* statBuffer) ^ 2 warnings generated.
Attachments
Patch
(1.85 KB, patch)
2021-05-07 02:51 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2021-05-07 02:51:48 PDT
Created
attachment 427983
[details]
Patch
EWS
Comment 2
2021-05-07 04:46:57 PDT
Committed
r277168
(
237454@main
): <
https://commits.webkit.org/237454@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427983
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug