[GTK] Warnings about unused filesystem functions https://bugs.webkit.org/show_bug.cgi?id=225507

Patch by Philippe Normand <pnormand@igalia.com> on 2021-05-07
Reviewed by Adrian Perez de Castro.

Since r277158 these functions are no longer needed.

* wtf/glib/FileSystemGlib.cpp:
(WTF::FileSystemImpl::getFileStat): Deleted.
(WTF::FileSystemImpl::getFileLStat): Deleted.

Canonical link: https://commits.webkit.org/237454@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277168 268f45cc-cd09-0410-ab3c-d52691b4dbfc